--- a/latihan/latihan3/L3c233040075.html
+++ b/latihan/latihan3/L3c233040075.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Latihan 3 - CSS</title>
+    <title>Latihan 3c - CSS</title>
 	<link rel="stylesheet" href="L3c233040075.css">
 </head>
 <body>
